--- a/css/rocket.css
+++ b/css/rocket.css
@@ -1,3 +1,7 @@
+body{
+	font-family: 'helvetica', 'arial', sans-serif;
+}
+
 .left{
 	background-color: aquamarine;
 	position: fixed;
@@ -7,8 +11,30 @@
 	left: 0;
 }
 
+.interface{
+	text-align: center;
+	padding: 20px;
+}
+
+a.button{
+	display: inline-block;
+	background-color: gray;
+	color: black;
+	padding: 10px;
+	text-decoration: none;
+	border-radius: 5px;
+	text-transform: uppercase;
+	transition: color 300ms;
+	text-decoration-thickness: ;
+
+}
+
+a:hover{
+	color: red;
+}
+
 .right{
-	background-color: aliceblue;
+	background-color: white;
 	position: fixed;
 	width: 50%;
 	height: 100%;
@@ -17,7 +43,8 @@
 }
 
 .ground{
-	background-color: green;
+	background: url('../img/grass.JFIF') no-repeat center 
+	center;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -29,9 +56,10 @@
 	position: absolute;
 	left: 50%;
 	bottom: 20px;
-	width: 20px;
-	height: 100px;
-	background-color: blue;
+	width: 225px;
+	height: 225px;
+	margin-left: -112.5px;
+	background: url('../img/rocket.png') no-repeat 0 0;
 	transition: bottom 10000ms;
 
 }
@@ -43,6 +71,13 @@ body.body-state1 .rocket{
 body.body-state3 .rocket,
 body.body-state4 .rocket{
 	bottom: 1000px;
+}
+
+body.body-state5 .rocket{
+	background: url('../img/explosion.gif') no-repeat 0 0;
+	width: 674px;
+	height: 818px;
+	margin-left: -347px;
 }
 
 .state1,
